# data_analyst_agent

./: .gitignore  Cargo.toml  README.md  system_prompt.txt
src/: agent.rs  config.rs  db.rs  error.rs  llm.rs  main.rs  prompt.rs
src/agent/: mod.rs  runner.rs  trace.rs
src/tool/: mod.rs  query.rs  schema.rs
utils/: data_generator.py
