[package]
name = "data_analyst_agent"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52.1", features = ["full"] }
rusqlite = { version = "0.39.0", features = ["bundled"] } # "bundled" compiles sqlite for you
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.12.28", features = ["json"] }
dotenvy = "0.15.7"
chrono = "0.4.44"
thiserror   = "2.0.18"
